# finny-light-vha

./: README.md  VERSION.md  app.py  pyproject.toml  requirements.txt  streamlit_app.py
adapters/: __init__.py  base.py  mcp_eboekhouden.py
finny_core/: README.md  VERSION.md  pyproject.toml
finny_core/src/finny_core/: __init__.py  __main__.py  models.py  pipeline.py
finny_core/src/finny_core/adapters/: __init__.py  csv_eboekhouden.py  pdf_jaarrekening.py
finny_core/src/finny_core/compute/: __init__.py  engine.py
finny_core/src/finny_core/intent/: __init__.py  classifier.py
finny_core/src/finny_core/llm/: __init__.py  explain.py
finny_core/src/finny_core/mkb_light/: __init__.py  categorize.py
finny_core/src/finny_core/normalize/: __init__.py  cleaner.py
finny_core/src/finny_core/output/: __init__.py
finny_core/src/finny_core/rgs/: __init__.py  mapper.py
finny_core/src/finny_core/synonyms/: __init__.py
llm/: __init__.py  openai_client.py
orchestrator/: __init__.py  profile_loader.py  question_router.py  source_loader.py
profiles/: __init__.py  demo_mcp_only.toml  registry.py  schema.py  tenant_profile_map.toml  youngtech_mcp_only.toml
prompts/: base.md  demo.md  youngtech.md
tests/: test_mcp_only_refusal.py  test_profile_loading.py  test_source_loader_fail_fast.py  test_v2_defects.py
