[project]
name = "finny-app"
version = "0.1.0a0"
description = "Finny — financiële AI-pilot, één codebase met adapter-pluggables en capability contracts"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.32",
    "pandas>=2.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "tomli>=2.0;python_version<'3.11'",
    "requests>=2.31",
    "openai>=1.40",
    "anthropic>=0.40",
    "pyotp>=2.9",
    "rapidfuzz>=3.0",
]

[project.optional-dependencies]
# YoungTech / demo: alleen MCP — minimale attack surface
mcp = []

# Full history: PDF + CSV + XAF — voor B2B met historie
full = [
    "pypdf>=3.0",
    "pdfplumber>=0.10",
    "lxml>=5.0",
]

# Test
test = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["adapters", "orchestrator", "profiles"]
